--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -162,6 +162,8 @@
     <Compile Include="Blocks\Example\ControlGallery\ControlGalleryInitializationBox.cs" />
     <Compile Include="Blocks\Group\GroupMemberScheduleTemplateDetail\GroupMemberScheduleTemplateDetailOptionsBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PersonBag.cs" />
+    <Compile Include="Blocks\Group\GroupPlacement\PlacementConfigurationSettingOptionsBag.cs" />
+    <Compile Include="Blocks\Group\GroupPlacement\PlacementConfigurationSettingsBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PlacementBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PlacementGroupBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PlacementGroupTypeBag.cs" />
