- Added two new columns to the PersonalDevice table to track the location permission status and whether Precise Location is enabled.

--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Lms\LearningCompletionStatus.cs" />
     <Compile Include="Lms\PresentedFor.cs" />
     <Compile Include="Lms\RequirementType.cs" />
+    <Compile Include="Mobile\LocationPermissionStatus.cs" />
     <Compile Include="Mobile\MobileNavigationActionType.cs" />
     <Compile Include="Net\CookieSameSiteMode.cs" />
     <Compile Include="Net\ResponseElementLocation.cs" />
