--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Migrations\202504091716317_AddPersonalDeviceLocationPermissionStatus.Designer.cs">
       <DependentUpon>202504091716317_AddPersonalDeviceLocationPermissionStatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504092004075_AddWorkflowTypeSlug.cs" />
+    <Compile Include="Migrations\202504092004075_AddWorkflowTypeSlug.Designer.cs">
+      <DependentUpon>202504092004075_AddWorkflowTypeSlug.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2586,6 +2590,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504091716317_AddPersonalDeviceLocationPermissionStatus.resx">
       <DependentUpon>202504091716317_AddPersonalDeviceLocationPermissionStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504092004075_AddWorkflowTypeSlug.resx">
+      <DependentUpon>202504092004075_AddWorkflowTypeSlug.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
