- Added new property to FinancialAccount to determine if campus matching logic is used.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\202504092004075_AddWorkflowTypeSlug.Designer.cs">
       <DependentUpon>202504092004075_AddWorkflowTypeSlug.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504092102011_UpdatePrinterDpiAttributeName.cs" />
+    <Compile Include="Migrations\202504092102011_UpdatePrinterDpiAttributeName.Designer.cs">
+      <DependentUpon>202504092102011_UpdatePrinterDpiAttributeName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2593,6 +2597,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504092004075_AddWorkflowTypeSlug.resx">
       <DependentUpon>202504092004075_AddWorkflowTypeSlug.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504092102011_UpdatePrinterDpiAttributeName.resx">
+      <DependentUpon>202504092102011_UpdatePrinterDpiAttributeName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
