- (Cms) Add Media Element Detail

--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Cms\ContentChannelTypeDetail.cs" />
     <Compile Include="Cms\LavaShortcodeList.cs" />
     <Compile Include="Cms\MediaAccountList.cs" />
+    <Compile Include="Cms\MediaElementDetail.cs" />
     <Compile Include="Cms\MediaFolderList.cs" />
     <Compile Include="Cms\PersonalizationSegmentList.cs" />
     <Compile Include="Cms\ThemeDetail.cs" />
