--- a/Rock.Tests/Rock.Tests.csproj
+++ b/Rock.Tests/Rock.Tests.csproj
@@ -226,6 +226,7 @@
     <Compile Include="..\Rock.Version\AssemblySharedInfo.cs">
       <Link>AssemblySharedInfo.cs</Link>
     </Compile>
+    <Compile Include="Lava\Helpers\LavaAppendWatchesHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Blocks\Mobile\Cms\DailyChallengeEntryTests.cs" />
     <Compile Include="CheckIn\v2\CheckInMockDatabase.cs" />
