- Added a column to the PersonalDevice table to track the last date and time when a person turned off their location permission.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\202504092102011_UpdatePrinterDpiAttributeName.Designer.cs">
       <DependentUpon>202504092102011_UpdatePrinterDpiAttributeName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504111835181_AddPersonalDeviceLocationDisabledDateTime.cs" />
+    <Compile Include="Migrations\202504111835181_AddPersonalDeviceLocationDisabledDateTime.Designer.cs">
+      <DependentUpon>202504111835181_AddPersonalDeviceLocationDisabledDateTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2600,6 +2604,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504092102011_UpdatePrinterDpiAttributeName.resx">
       <DependentUpon>202504092102011_UpdatePrinterDpiAttributeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504111835181_AddPersonalDeviceLocationDisabledDateTime.resx">
+      <DependentUpon>202504111835181_AddPersonalDeviceLocationDisabledDateTime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
