--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -88,6 +88,14 @@
     <Compile Include="Migrations\202504111835181_AddPersonalDeviceLocationDisabledDateTime.Designer.cs">
       <DependentUpon>202504111835181_AddPersonalDeviceLocationDisabledDateTime.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504151646241_Rollup_20250415.cs" />
+    <Compile Include="Migrations\202504151646241_Rollup_20250415.Designer.cs">
+      <DependentUpon>202504151646241_Rollup_20250415.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202504151751340_CodeGenerated_20250415.cs" />
+    <Compile Include="Migrations\202504151751340_CodeGenerated_20250415.Designer.cs">
+      <DependentUpon>202504151751340_CodeGenerated_20250415.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2607,6 +2615,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504111835181_AddPersonalDeviceLocationDisabledDateTime.resx">
       <DependentUpon>202504111835181_AddPersonalDeviceLocationDisabledDateTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504151646241_Rollup_20250415.resx">
+      <DependentUpon>202504151646241_Rollup_20250415.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504151751340_CodeGenerated_20250415.resx">
+      <DependentUpon>202504151751340_CodeGenerated_20250415.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
