- Added Obsidian Medial Element Detail Block
commit b1789c9a3622a477796b8ad2fd500bd6eac4082e
Author: Nathan <nlabarbera@me.com>
Date:   Wed Apr 16 16:27:06 2025 -0700

--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CheckIn\AgeRestrictionMode.cs" />
     <Compile Include="CheckIn\GradeAndAgeMatchingMode.cs" />
     <Compile Include="CheckIn\LocationSelectionStrategy.cs" />
+    <Compile Include="Cms\MediaElementQuality.cs" />
     <Compile Include="Cms\ThemeFieldType.cs" />
     <Compile Include="Blocks\Crm\FamilyPreRegistration\CommunicationPreference.cs" />
     <Compile Include="Blocks\Group\Scheduling\ToolboxActionType.cs" />
