- Added multi-select client side capabilities.

--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Blocks\Example\ControlGallery\ControlGalleryInitializationBox.cs" />
     <Compile Include="Blocks\Group\GroupMemberScheduleTemplateDetail\GroupMemberScheduleTemplateDetailOptionsBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\GroupMemberBag.cs" />
+    <Compile Include="Blocks\Group\GroupPlacement\AttributeFiltersBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\RegistrantBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PersonBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\GroupPlacementMappingBag.cs" />
