- (Core) Updated Person/HasCompletedClassActivityFilter data view filter to be Obsidian compatible.
- Added LearningClassPicker and LearningClassActivityPicker to handle some of the responsibilities in the filter.

--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -850,6 +850,8 @@
     <Compile Include="Rest\Controls\EmailEditorDeleteEmailSectionOptionsBag.cs" />
     <Compile Include="Rest\Controls\EmailEditorGetEmailSectionOptionsBag.cs" />
     <Compile Include="Rest\Controls\EmailEditorEmailSectionBag.cs" />
+    <Compile Include="Rest\Controls\LearningClassActivityPickerGetLearningClassActivitiesOptionsBag.cs" />
+    <Compile Include="Rest\Controls\LearningClassPickerGetLearningClassesOptionsBag.cs" />
     <Compile Include="Rest\Controls\MergeFieldPickerGetSearchedMergedFieldsOptionsBag.cs" />
     <Compile Include="Rest\Controls\PageNavButtonsGetLinksOptionsBag.cs" />
     <Compile Include="Rest\Controls\AssetManagerMoveFolderOptionsBag.cs" />
