--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -123,7 +123,10 @@
     <Compile Include="Blocks\Cms\PersonalizationSegmentList\PersonalizationSegmentListOptionsBag.cs" />
     <Compile Include="Blocks\Communication\Chat\ChatConfiguration\ChatConfigurationBag.cs" />
     <Compile Include="Blocks\Communication\Chat\ChatConfiguration\ChatConfigurationInitializationBox.cs" />
+    <Compile Include="Blocks\Communication\Chat\ChatView\ChatPersonDataBag.cs" />
     <Compile Include="Blocks\Communication\Chat\ChatView\ChatPersonSettingsBag.cs" />
+    <Compile Include="Blocks\Communication\Chat\ChatView\ChatViewConfigurationBag.cs" />
+    <Compile Include="Blocks\Communication\Chat\ChatView\ChatViewInitializationBox.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardGetEmailPreviewHtmlBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardCheckShortLinkTokenBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardSaveCommunicationTemplateResponseBag.cs" />
