+ (CRM) Added a new Defined Type called "Record Source" to help track where individuals are first introduced into Rock, such as through event registration, Check-in or Workflow entry forms.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -2692,6 +2692,7 @@
     <Compile Include="Utility\PersonPreferenceCollection.cs" />
     <Compile Include="Utility\PrayerRequestLastPrayedDetail.cs" />
     <Compile Include="Utility\PrayerRequestQueryOptions.cs" />
+    <Compile Include="Crm\RecordSource\RecordSourceHelper.cs" />
     <Compile Include="Utility\RockCurrencyCodeInfo.cs" />
     <Compile Include="Financial\FinancialStatementTemplateReportSettings.cs" />
     <Compile Include="Utility\RockDynamic.cs" />
