--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\202504151751340_CodeGenerated_20250415.Designer.cs">
       <DependentUpon>202504151751340_CodeGenerated_20250415.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504222122021_AddRecordSource.cs" />
+    <Compile Include="Migrations\202504222122021_AddRecordSource.Designer.cs">
+      <DependentUpon>202504222122021_AddRecordSource.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2628,6 +2632,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504151751340_CodeGenerated_20250415.resx">
       <DependentUpon>202504151751340_CodeGenerated_20250415.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504222122021_AddRecordSource.resx">
+      <DependentUpon>202504222122021_AddRecordSource.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
