--- a/Rock.JavaScript.Obsidian/package.json
+++ b/Rock.JavaScript.Obsidian/package.json
@@ -7,7 +7,7 @@
     "build:types": "node ./Build/build-types.js",
     "build-framework": "npm run build:types && node ./Build/rollup-mt.js Framework/rollup.config.cjs",
     "build-core": "webpack --no-color && lessc --js System/vendor.less dist/System/obsidian-vendor.css && cleancss --source-map dist/System/obsidian-vendor.css -o dist/System/obsidian-vendor.min.css",
-    "watch": "rollup --config Framework/rollup.config.cjs --watch",
+    "watch": "node --max-old-space-size=8192 ./node_modules/rollup/dist/bin/rollup --config Framework/rollup.config.cjs --watch",
     "copy-webforms-core": "copyfiles -u 2 \"dist/System/*\" \"../RockWeb/Obsidian/\"",
     "clean": "rimraf dist",
     "test": "jest"
