- Moved the Obsidian CommunicationType enum from a block-scoped namespace to the shared Communication namespace.

--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -50,7 +50,7 @@
     <Compile Include="AI\ChatMessageRole.cs" />
     <Compile Include="AI\NameRemoval.cs" />
     <Compile Include="AI\TextEnhancement.cs" />
-    <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationType.cs" />
+    <Compile Include="Communication\CommunicationType.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\PushOpenAction.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntry\Mode.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntry\MediumType.cs" />
