--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -109,6 +109,14 @@
       <DependentUpon>202504281829314_UpdateWorkflowEntryFormSharingAndFormBuilderSupport.cs</DependentUpon>
     </Compile>
     <Content Include="Migrations\202504281829314_UpdateWorkflowEntryFormSharingAndFormBuilderSupport_GenerateWorkflowTypeSlugs.sql" />
+    <Compile Include="Migrations\202504291730237_Rollup_20250429.cs" />
+    <Compile Include="Migrations\202504291730237_Rollup_20250429.Designer.cs">
+      <DependentUpon>202504291730237_Rollup_20250429.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202504291802180_CodeGenerated_20250429.cs" />
+    <Compile Include="Migrations\202504291802180_CodeGenerated_20250429.Designer.cs">
+      <DependentUpon>202504291802180_CodeGenerated_20250429.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2643,6 +2651,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504281829314_UpdateWorkflowEntryFormSharingAndFormBuilderSupport.resx">
       <DependentUpon>202504281829314_UpdateWorkflowEntryFormSharingAndFormBuilderSupport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504291730237_Rollup_20250429.resx">
+      <DependentUpon>202504291730237_Rollup_20250429.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504291802180_CodeGenerated_20250429.resx">
+      <DependentUpon>202504291802180_CodeGenerated_20250429.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
