- Fix typos that were in two Attribute Descriptions
commit 3516c0b443a53ea1068da464263662d8e5d33890
Author: Nathan <nlabarbera@me.com>
Date:   Wed Apr 30 15:30:20 2025 -0700

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1805,6 +1805,7 @@
     <Compile Include="Plugin\HotFixes\232_UpdateContentFileTypeBlacklist.cs" />
     <Compile Include="Plugin\HotFixes\244_MigrationRollupsForV17_1_1.cs" />
     <Compile Include="Plugin\HotFixes\243_AddDefaultAllowedGroupTypesToMobileGroupRegistration.cs" />
+    <Compile Include="Plugin\HotFixes\245_UpdateMergeFieldAttributeDescription.cs" />
     <Compile Include="Plugin\HotFixes\HotFixMigrationResource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
