--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -117,6 +117,10 @@
     <Compile Include="Migrations\202504291802180_CodeGenerated_20250429.Designer.cs">
       <DependentUpon>202504291802180_CodeGenerated_20250429.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202505021623060_AddCommunicationSummaryAndImproveExistingIndex.cs" />
+    <Compile Include="Migrations\202505021623060_AddCommunicationSummaryAndImproveExistingIndex.Designer.cs">
+      <DependentUpon>202505021623060_AddCommunicationSummaryAndImproveExistingIndex.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2657,6 +2661,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504291802180_CodeGenerated_20250429.resx">
       <DependentUpon>202504291802180_CodeGenerated_20250429.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202505021623060_AddCommunicationSummaryAndImproveExistingIndex.resx">
+      <DependentUpon>202505021623060_AddCommunicationSummaryAndImproveExistingIndex.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
