--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1807,6 +1807,7 @@
     <Compile Include="Plugin\HotFixes\244_MigrationRollupsForV17_1_1.cs" />
     <Compile Include="Plugin\HotFixes\243_AddDefaultAllowedGroupTypesToMobileGroupRegistration.cs" />
     <Compile Include="Plugin\HotFixes\245_UpdateMergeFieldAttributeDescription.cs" />
+    <Compile Include="Plugin\HotFixes\246_AddProximityCheckInAttribute.cs" />
     <Compile Include="Plugin\HotFixes\HotFixMigrationResource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
