- Converted logic to use idKey pattern. Added feature to pass source person into Group Placement filtering.

--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Blocks\Core\ScheduledJobHistoryList\ScheduledJobHistoryListOptionsBag.cs" />
     <Compile Include="Blocks\Example\ControlGallery\ControlGalleryInitializationBox.cs" />
     <Compile Include="Blocks\Group\GroupMemberScheduleTemplateDetail\GroupMemberScheduleTemplateDetailOptionsBag.cs" />
+    <Compile Include="Blocks\Group\GroupPlacement\GroupPlacementKeysBag.cs" />
+    <Compile Include="Blocks\Group\GroupPlacement\AddGroupMembersBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\DetachGroupBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PlacementPeopleBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\GroupMemberBag.cs" />
